<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoADK</string>
    <string name="degree">Degree=</string>
    <string name="distance">Distance=</string>
    <string name="degree_value">0</string>
    <string name="distance_value">0</string>
    <string name="degree_unit">°</string>
    <string name="distance_unit">cm</string>
    <string name="arduino">Arduino</string>
    <string name="rcserver">RC Server</string>
    <string name="rcclient">RC Client</string>
    <string name="server">Server</string>
    <string name="ip_address">IP address</string>

    <!-- Notification -->
    <string name="notif_service_started">ArduinoADK Service started</string>
    <string name="notif_service_stopped">ArduinoADK Service stopped</string>
    <string name="notif_service_label">ArduinoADK</string>
    <string name="notif_rcserver_service_started">RCServer started</string>
    <string name="notif_rcserver_service_stopped">RCServer Service stopped</string>
    <string name="notif_rcserver_service_label">RCServer</string>
    <string name="notif_rcclient_service_started">RCClient started</string>
    <string name="notif_rcclient_service_stopped">RCClient Service stopped</string>
    <string name="notif_rcclient_service_label">RCClient</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_arduino">Arduino</string>
    <string name="menu_rcserver">RC Server</string>
    <string name="menu_rcclient">RC Client</string>
    <string name="menu_test">Testing</string>
    <string name="menu_abouthelp">About &amp; Help</string>
    <string name="menu_quit">Quit</string>

    <!-- Preferences -->
    <string name="title_application_pref_header">Application</string>
    <string name="summary_application_pref_header">Application settings.</string>
    <string name="title_remotecontrol_pref_header">Remote Control</string>
    <string name="summary_remotecontrol_pref_header">Remote Control settings.</string>
    <string name="title_arduino_pref_header">Arduino</string>
    <string name="summary_arduino_pref_header">Arduino settings.</string>
    <string name="title_remotecontrol_server_pref">Server</string>
    <string name="title_remotecontrol_client_pref">Client</string>
    <string name="title_auto_start_rcserver">Auto Start</string>
    <string name="summary_auto_start_rcserver">Start up server automaticaly when application starts</string>
    <string name="title_tcp_port">TCP Port</string>
    <string name="summary_tcp_port">TCP Port number to bind locally</string>
    <string name="dialogmessage_tcp_port">Port number, in range 1024&#8211;65536</string>
    <string name="title_rc_server">Hostname</string>
    <string name="summary_rc_server">Hostname or IP address of the RC Server</string>
    <string name="title_prevent_going_to_sleep">Prevent going to sleep</string>
    <string name="summary_prevent_going_to_sleep">Most phones put processor to sleep mode when screen off</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_analog_on_screen_controls">AnalogOnScreenControls</string>

</resources>