<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.company.android.arduinoadk.SettingsActivity$GlobalSettingsPreferenceFragment"
        android:summary="@string/summary_application_pref_header"
        android:title="@string/title_application_pref_header" >
    </header>
    <header
        android:fragment="com.company.android.arduinoadk.SettingsActivity$RemoteControlSettingsPreferenceFragment"
        android:summary="@string/summary_remotecontrol_pref_header"
        android:title="@string/title_remotecontrol_pref_header" >
    </header>
    <header
        android:fragment="com.company.android.arduinoadk.SettingsActivity$ArduinoSettingsPreferenceFragment"
        android:summary="@string/summary_arduino_pref_header"
        android:title="@string/title_arduino_pref_header" >
    </header>

</preference-headers>