<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_rcserver"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_rcserver"/>
    <item
        android:id="@+id/menu_rcclient"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_rcclient"/>
    <item
        android:id="@+id/menu_arduino"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_arduino"/>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_abouthelp"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_abouthelp"/>
    <item
        android:id="@+id/menu_controls"
        android:showAsAction="ifRoom|withText"
        android:title="test"/>
    <item
        android:id="@+id/menu_quit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_quit"/>

</menu>