<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distanceValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/distance_value" />

        <TextView
            android:id="@+id/distanceUnitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_unit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/degree_value" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_unit" />
    </LinearLayout>

    <TextView
        android:id="@+id/arduinoConsole"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dp"
        android:gravity="top"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:textColor="@color/orange" />

    <include
        android:id="@+id/RadarContainer_ref"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/radarcontainer" />

</LinearLayout>